tests/baselines/reference/parserComputedPropertyName20.errors.txt
parserComputedPropertyName20.ts(2,6): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName20.ts (1 errors) ====
    interface I {
        [e](): number 
         ~
!!! error TS2304: Cannot find name 'e'.
    }